<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#31AFB4">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="org.opencv.cultoftheunicorn.marvel.cultoftheunicorn.marvel.Training"
        android:orientation="vertical"
        >


        <cultoftheunicorn.marvel.Tutorial3View
            android:id="@+id/tutorial3_activity_java_surface_view"
            android:layout_width="332dp"
            android:layout_height="339dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="19dp"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/results"
            android:layout_width="301dp"
            android:layout_height="191dp"
            android:layout_above="@+id/scan"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:layout_marginBottom="43dp"
            android:layout_toEndOf="@+id/tutorial3_activity_java_surface_view"
            android:layout_toRightOf="@+id/tutorial3_activity_java_surface_view"
            android:gravity="center"
            android:textAlignment="center"
            android:textStyle="bold" />

        <ToggleButton
            android:id="@+id/scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textAllCaps="false"
            android:textOff="@string/scan"
            android:textOn="@string/scanning"
            android:layout_alignBottom="@+id/tutorial3_activity_java_surface_view"
            android:layout_toRightOf="@+id/tutorial3_activity_java_surface_view"
            android:layout_toEndOf="@+id/tutorial3_activity_java_surface_view"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp" />



        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/results"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            android:textAllCaps="false"
            android:text="@string/enviar" />

        <Button
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/results"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="34dp"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="145dp"
            android:layout_marginRight="145dp"
            android:layout_marginBottom="50dp"
            android:layout_toEndOf="@+id/scan"
            android:layout_toRightOf="@+id/scan"
            android:text="@string/camara2"
            android:textAllCaps="false" />


    </RelativeLayout>

</ScrollView>

