<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#31AFB4" >

    <Button
        android:id="@+id/perfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/button_rounded"
        android:text="@string/perfil"
        app:backgroundTint="#115571"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/actividades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/perfil"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/button_rounded"
        android:text="@string/actividad"
        app:backgroundTint="#115571"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/perfil" />

    <Button
        android:id="@+id/camara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actividades"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:background="@drawable/button_rounded"
        android:text="@string/camara"
        app:backgroundTint="#115571"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idioma" />

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/camara"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:background="@drawable/button_rounded"
        android:text="@string/logout"
        app:backgroundTint="#115571"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camara" />

</RelativeLayout>