<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#31AFB4"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="217dp"
        android:layout_height="91dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="93dp"
        android:layout_marginLeft="93dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:autoSizeTextType="uniform"
        android:text="@string/Tipos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_usu"
        android:layout_width="286dp"
        android:layout_height="164dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="66dp"
        android:layout_marginLeft="66dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:background="@drawable/button_rounded"
        android:text="@string/Usuario"
        app:backgroundTint="#115571"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_admin" />

    <Button
        android:id="@+id/btn_admin"
        android:layout_width="288dp"
        android:layout_height="152dp"
        android:layout_below="@+id/btn_usu"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="58dp"
        android:background="@drawable/button_rounded"
        android:text="@string/Administrador"
        app:backgroundTint="#115571"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</RelativeLayout>