<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#31AFB4">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="139dp"
        android:layout_height="47dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="122dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="150dp"
        android:autoSizeTextType="uniform"
        android:text="@string/Miperfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_guardar_cambios"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Regresar"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/button_rounded"
        android:text="@string/Guardar_cambios"
        app:backgroundTint="#115571"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/myPhoto"
        android:layout_width="183dp"
        android:layout_height="159dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_box_2"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/editPhoto"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-26dp"
        android:layout_marginLeft="-26dp"
        android:layout_marginTop="134dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:layout_marginBottom="547dp"
        android:layout_toEndOf="@+id/myPhoto"
        android:layout_toRightOf="@+id/myPhoto"
        android:src="@drawable/ic_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/myPhoto"
        app:layout_constraintTop_toBottomOf="@+id/btn_guardar_cambios" />

    <EditText
        android:id="@+id/txt_nombre_perfil"
        android:layout_width="350dp"
        android:layout_height="57dp"
        android:layout_below="@+id/myPhoto"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="33dp"
        android:ems="10"
        android:hint="@string/Nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myPhoto" />

    <EditText
        android:id="@+id/txt_telefono_perfil"
        android:layout_width="347dp"
        android:layout_height="58dp"
        android:layout_below="@+id/txt_nombre_perfil"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="33dp"
        android:ems="10"
        android:hint="@string/Numero"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre_perfil" />

    <Button
        android:id="@+id/Regresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_telefono_perfil"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/button_rounded"
        android:text="@string/Regresar"
        app:backgroundTint="#115571"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_telefono_perfil" />
</RelativeLayout>