<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#31AFB4">


    <ImageView
        android:id="@+id/btn_avanzar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_telefono_ss"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="331dp"
        android:layout_marginLeft="331dp"
        android:layout_marginTop="285dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/ic_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="#115571" />

    <EditText
        android:id="@+id/txt_telefono_ss"
        android:layout_width="339dp"
        android:layout_height="42dp"
        android:layout_below="@+id/txt_nombre_ss"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="37dp"
        android:autoSizeTextType="uniform"
        android:ems="10"
        android:hint="@string/Numero2"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre_ss" />

    <EditText
        android:id="@+id/txt_nombre_ss"
        android:layout_width="339dp"
        android:layout_height="42dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="34dp"
        android:autoSizeTextType="uniform"
        android:ems="10"
        android:hint="@string/Nombre2"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="291dp"
        android:layout_height="73dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="66dp"
        android:layout_marginRight="66dp"
        android:autoSizeTextType="uniform"
        android:text="@string/Informacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>